<?xml version="1.0"?>
<package>
  <name>core_msgs</name>
  <version>0.1.0</version>
  <description>Nova Core messages package</description>
  <maintainer email="m.migliavacca@novalabs.io">Martino Migliavacca - Nova Labs</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
